Fix QR code cropping by using responsive width

--- a/extension/css/main.css
+++ b/extension/css/main.css
@@ -3,6 +3,6 @@
     margin-bottom: 15px;
 }
 #qrimg svg {
-    width: 300%;
+    width: 100%;
     height: auto;
 }
